<resources>
    <string name="app_name">서울맛칩</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">확인</string>
    <string name="KAKAO_NATIVE_APP_KEY">430d044860ced838669f30b366d0ae30</string>
    <string name="OAUTH_CLIENT_ID">Vwuh6NagdklKrwm5BxSA</string>
    <string name="OAUTH_CLIENT_SECRET">BrJOLJRbpw</string>
    <string name="OAUTH_CLIENT_NAME">@string/app_name</string>
    <string name="login">님 환영합니다.</string>
    <string name="kakao_error">카카오톡이 설치되어 있지 않습니다\n카카오 계정 로그인을 해주세요.</string>
    <string name="logout">로그아웃 되었습니다.</string>
    <string name="intro_message">착한가격업소는 맛 , 가격 , 서비스 모두 훌륭합니다</string>
    <string name="permission_notice">권한을 허용해주세요.</string>
    <string name="gps_notice">GPS가 꺼져있습니다. GPS를 사용해주세요.</string>
    <string name="network_notice">모바일 네트워크 연결 상태를 확인해주세요.</string>
    <string name="permission_guide">서울맛칩 앱 이용을 위해\n다음 권한의 허용이 필요합니다.</string>
    <string name="permission_gps_name">위치(필수)</string>
    <string name="permission_gps">현재 나의위치 및 지도 서비스\n이용을 위해 필요한 권한입니다.</string>
    <string name="permission_call_name">전화(선택)</string>
    <string name="permission_call">착한가격업소 전화연결 정보 사용에\n필요한 권한입니다.</string>
    <string name="permission_gallery_name">사진(선택)</string>
    <string name="permission_gallery">리뷰글 작성시 사진 등록을 위해 갤러리에\n접근할 때 필요한 권한입니다.</string>
    <string name="app_meun1">지도</string>
    <string name="app_meun2">검색</string>
    <string name="app_meun3">카테고리</string>
    <string name="app_meun4">맛칩평가단</string>
    <string name="app_meun5">마이페이지</string>
    <string name="category1">한식</string>
    <string name="category2">경양식일식</string>
    <string name="category3">중식</string>
    <string name="category4">기타외식</string>
    <string name="category5">세탁</string>
    <string name="category6">미용</string>
    <string name="category7">숙박</string>
    <string name="category8">기타</string>
    <string name="help_content">회원레벨 Lv1~10  : 동메달\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Lv11~20 : 은메달\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Lv21~30 : 금메달\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;(1업을 하기 위한 경험치 10pt)\n
         &#160;&#160;&#160;&#160;-리뷰 글 작성시 3pt\n
         &#160;&#160;&#160;&#160;-사진이 포함된 리뷰 글 작성시 5pt\n
         &#160;&#160;&#160;&#160;-맛칩 제보글 작성시 5pt\n
         &#160;&#160;&#160;&#160;-제보한 맛칩 인증완료시 20pt</string>
    <string name="service_manual">copyright 2021.mapo3.All right reserved\n서비스 정책 및 이용약관</string>
    <string name="email">silmxmail@naver.com</string>
    <string name="report">건의사항보내기</string>
    <string name="category_all">전체보기</string>
    <string name="category_list">목록으로 보기</string>
    <string name="category_map">지도로 보기</string>
</resources>