<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CATEGORY_01_01">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="5dp"
        android:id="@+id/category_list">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/category_list"
            android:background="@drawable/round_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/category_map"
            android:background="@drawable/round_button"/>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/categoty_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_list">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/category_all"
                android:background="@drawable/round_button"
                android:layout_marginRight="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/category1"
                android:background="@drawable/round_button"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/category2"
                android:background="@drawable/round_button"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/category3"
                android:background="@drawable/round_button"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/category4"
                android:background="@drawable/round_button"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/category5"
                android:background="@drawable/round_button"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/category6"
                android:background="@drawable/round_button"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/category7"
                android:background="@drawable/round_button"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/category8"
                android:background="@drawable/round_button"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/categoty_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoty_scrollview"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:borderlessButtonStyle"
            android:text="평점순"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:borderlessButtonStyle"
            android:text="거리순"
            android:textColor="@color/black"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/categoty_sort">
    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>