<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.CATEGORY_01_01_01">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:id="@+id/category_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <Button
                    android:id="@+id/category_ALL"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/category_all"
                    android:background="@drawable/button_back"
                    app:backgroundTint="@null"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/category_KOR"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/category1"
                    android:background="@drawable/button_back"
                    app:backgroundTint="@null"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/category_JAP"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/category2"
                    android:background="@drawable/button_back"
                    app:backgroundTint="@null"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/category_CHI"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/category3"
                    android:background="@drawable/button_back"
                    app:backgroundTint="@null"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/category_ANDF"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/category4"
                    android:background="@drawable/button_back"
                    app:backgroundTint="@null"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/category_LAU"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/category5"
                    android:background="@drawable/button_back"
                    app:backgroundTint="@null"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/category_BEA"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/category6"
                    android:background="@drawable/button_back"
                    app:backgroundTint="@null"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/category_LOD"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/category7"
                    android:background="@drawable/button_back"
                    app:backgroundTint="@null"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/category_ANDS"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/category8"
                    android:background="@drawable/button_back"
                    app:backgroundTint="@null"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/category_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_scrollview"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/category_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:borderlessButtonStyle"
                android:text="평점순"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/category_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:borderlessButtonStyle"
                android:text="거리순"
                android:textColor="@color/black"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_sort"/>

    </RelativeLayout>

</FrameLayout>