<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.PERMISSION_01">

    <ImageView
        android:id="@+id/pattern3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_basic"
        android:layout_marginEnd="@dimen/margin_basic"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pattern"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_basic"
        android:layout_marginTop="@dimen/icon_height"
        android:layout_marginEnd="@dimen/margin_basic"
        android:background="@drawable/dot_round_edge"
        android:elevation="@dimen/elevation1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon_height3"
                android:layout_marginStart="@dimen/logo_margin"
                android:layout_marginEnd="@dimen/logo_margin"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:duplicateParentState="false"
                android:fitsSystemWindows="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/app_logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_basic"
                android:layout_marginBottom="@dimen/margin_basic2"
                android:bufferType="spannable"
                android:text="@string/permission_guide"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_basic"
        android:layout_marginTop="@dimen/btn_icon"
        android:layout_marginEnd="@dimen/margin_basic"
        android:background="@drawable/round_button2"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/elevation1"
        android:orientation="vertical"
        android:padding="@dimen/margin_basic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_basic"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="@dimen/icon_height2"
                android:layout_height="@dimen/icon_width2"
                app:srcCompat="@drawable/ic_places" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_basic"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_gps_name"
                    android:textSize="@dimen/permission_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/map_item_height"
                    android:text="@string/permission_gps"
                    android:textSize="@dimen/permission_text" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_basic"
            android:layout_marginBottom="@dimen/margin_basic"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="@dimen/icon_height2"
                android:layout_height="@dimen/icon_width2"
                app:srcCompat="@drawable/ic_phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_basic4"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_call_name"
                    android:textSize="@dimen/permission_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/map_item_height"
                    android:text="@string/permission_call"
                    android:textSize="@dimen/permission_text" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_basic"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="@dimen/icon_height2"
                android:layout_height="@dimen/icon_width2"
                app:srcCompat="@drawable/ic_camera" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_basic4"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_gallery_name"
                    android:textSize="@dimen/permission_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/map_item_height"
                    android:text="@string/permission_gallery"
                    android:textSize="@dimen/permission_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/icon_width2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button2"
        android:elevation="0dp"
        android:onClick="goNextActivity"
        android:text="@string/ok"
        android:textSize="@dimen/permission_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pattern3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>